--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
       }
     },
     "deploy": {
-      "command": "npm run clean && npm run compile",
+      "command": "npm run compile",
       "env": {
         "DEBUG": "app:*"
       }
